--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -2,12 +2,48 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
 
 {% if user.is_authenticated %}
-    <h1>Hello!</h1>
-{% else %}
+
+    <table class="table table-striped table-hover table-bordered">
+        <thead class="table-dark">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Address</th>
+            <th scope="col">City</th>
+            <th scope="col">State</th>
+            <th scope="col">Zipcode</th>
+            <th scope="col">Created At</th>
+        </tr>
+        </thead>
+        <tbody>
+      
+        {% if records %}
+            {% for record in records %}
+                <tr class="clickable" onclick="window.location='record/{{record.id}}';" style="cursor: pointer;">
+                    <td>{{ record.id }}</td>
+                    <td>{{ record.first_name }} {{ record.last_name }}</td>
+                    <td>{{ record.email }}</td>
+                    <td>{{ record.phone }}</td>
+                    <td>{{ record.address }}</td>
+                    <td>{{ record.city }}</td>
+                    <td>{{ record.state }}</td>
+                    <td>{{ record.zipcode }}</td>
+                    <td>{{ record.created }}</td>
+                </tr>
+            {% endfor %}
         
+        {% endif %}      
+        </tbody>
+    </table>
+  
+
+{% else %}
+
+<div class="col-md-6 offset-md-3">  
 <h1>Login</h1>
 <form action="{% url 'home' %}" method="post">
     {% csrf_token %}
@@ -15,7 +51,7 @@
         <input type="text" class="form-control" name="username", placeholder="Username" required>
     </div>
     <div class="my-4">
-        <input type="password" class="form-control" name="password", placeholder="Password" required>
+        <input type="password" class="form-control" name="pass", placeholder="Password" required>
     </div>
 
     <button type="submit" class="btn btn-secondary">Login</button>
