--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -2,6 +2,31 @@
 
 {% block content %}
 
-<h1>Register</h1>
+<div class="col-md-6 offset-md-3">               
+    <h1>Register</h1>
+
+    <form action="" method="post">
+        {% csrf_token %}
+
+        {% if form.errors %}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            There's Something wrong with your registration...
+            {% for field in form %}
+                {% if field.errors %}
+                    {{ feild.error }}
+                {% endif %}
+            {% endfor %}
+
+             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+
+        {{ form.as_p }}
+    
+        <button type="submit" class="btn btn-secondary">Register</button>
+    </form>
+    
+   
+</div>
 
 {% endblock %}
